--- a/main.html
+++ b/main.html
@@ -13,7 +13,11 @@
     <main>
         <nav></nav>
         <section>
-            <section></section>
+            <section class="basic-introduction">
+                <p><span>이름</span> 정성욱</p>
+                <p><span>학번</span> 32204075</p>
+                <p><span>학과</span> 소프트웨어학과</p>
+            </section>
             <section></section>
             <section></section>
             ...
