--- a/main.html
+++ b/main.html
@@ -18,9 +18,19 @@
                 <p><span>학번</span> 32204075</p>
                 <p><span>학과</span> 소프트웨어학과</p>
             </section>
+            <section class="movie-animation">
+                <ul class="movie">
+                    <li>real-steal(리얼스틸)</li>
+                    <li>탑건</li>
+                    <li>트랜스포머</li>
+                </ul>
+                <ul class="animation">
+                    <li>나루토</li>
+                    <li>스파이 패밀리</li>
+                    <li>너의 이름은</li>
+                </ul>
+            </section>
             <section></section>
-            <section></section>
-            ...
         </section>
     </main>
     <footer></footer>
