--- a/main.html
+++ b/main.html
@@ -30,7 +30,18 @@
                     <li>너의 이름은</li>
                 </ul>
             </section>
-            <section></section>
+            <section class="hobby">
+                <ul class="web-toon">
+                    <li>신의탑</li>
+                    <li>금수저</li>
+                    <li>후레자식</li>
+                    <li>투신전생기</li>
+                </ul>
+                <ul class="baseball">
+                    <li>야구 경기 관람(시청)</li>
+                    <li>야구 시합경기 참가</li>
+                </ul>
+            </section>
         </section>
     </main>
     <footer></footer>
