--- a/main.html
+++ b/main.html
@@ -44,6 +44,11 @@
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="cheer-up">
+            <p class="today-coment">오늘도 수고했어. 내일은 10분 정도 차 한잔 여유 어때??</p>
+            <p class="life-moto">지금 너는 너를 얼마나 알고 있니??</p>
+        </section>
+    </footer>
 </body>
 </html>
