Update title in basic-introduction

--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
         <nav></nav>
         <section>
             <section class="basic-introduction">
+                <p class="title">기본 소개</p>
                 <p><span>이름</span> 정성욱</p>
                 <p><span>학번</span> 32204075</p>
                 <p><span>학과</span> 소프트웨어학과</p>
