Refactoring index structure of introduction

--- a/main.html
+++ b/main.html
@@ -19,29 +19,43 @@
                 <p><span>학번</span> 32204075</p>
                 <p><span>학과</span> 소프트웨어학과</p>
             </section>
-            <section class="movie-animation">
-                <ul class="movie">
-                    <li>real-steal(리얼스틸)</li>
-                    <li>탑건</li>
-                    <li>트랜스포머</li>
-                </ul>
-                <ul class="animation">
-                    <li>나루토</li>
-                    <li>스파이 패밀리</li>
-                    <li>너의 이름은</li>
-                </ul>
-            </section>
             <section class="hobby">
-                <ul class="web-toon">
-                    <li>신의탑</li>
-                    <li>금수저</li>
-                    <li>후레자식</li>
-                    <li>투신전생기</li>
-                </ul>
-                <ul class="baseball">
-                    <li>야구 경기 관람(시청)</li>
-                    <li>야구 시합경기 참가</li>
-                </ul>
+                <p>interesting hobby</p>
+                <section class="movie-animation">
+
+                    <ul class="best-movie">
+                        <li>real-steal(리얼스틸)</li>
+                        <li>탑건</li>
+                        <li>트랜스포머</li>
+                    </ul>
+                    <ul class="best-animation">
+                        <li>나루토</li>
+                        <li>스파이 패밀리</li>
+                        <li>너의 이름은</li>
+                    </ul>
+                </section>
+                <section class="book">
+                    <ul class="best-textbook">
+                        <li>소년 셜록 홈즈</li>
+                        <li>미움받을 용기</li>
+                    </ul>
+                    <ul class="best-web-toon">
+                        <li>신의탑</li>
+                        <li>금수저</li>
+                        <li>후레자식</li>
+                        <li>투신전생기</li>
+                    </ul>
+                </section>
+                <section class="sports">
+                    <ul class="baseball">
+                        <li>야구 경기 관람</li>
+                        <li>야구 경기 참가</li>
+                    </ul>
+                    <ul class="basketball">
+                        <li>농구 경기 관람</li>
+                        <li>농구 경기 참가</li>
+                    </ul>
+                </section>
             </section>
         </section>
     </main>
